Add evolution samples